--- a/RanCyan/RanCyan/Views/RanShikaMainPage.xaml
+++ b/RanCyan/RanCyan/Views/RanShikaMainPage.xaml
@@ -31,6 +31,13 @@
                     </Trigger>
                 </Style.Triggers>
             </Style>
+            <Style  x:Key="LabelStyle" TargetType="Label">
+                <Setter Property="VerticalOptions" Value="FillAndExpand"/>
+                <Setter Property="HorizontalTextAlignment" Value="Center"/>
+                <Setter Property="VerticalTextAlignment" Value="Center"/>
+                <Setter Property="FontAttributes" Value="Bold"/>
+                <Setter Property="FontSize" Value="100"/>
+            </Style>
         </ResourceDictionary>
     </TabbedPage.Resources>
 
@@ -41,14 +48,13 @@
                 <RowDefinition Height="*" />
                 <RowDefinition Height="100" />
             </Grid.RowDefinitions>
-            <Label Text="{Binding ShingenLabel.Value}" Grid.Row="0" FontSize = "100" TextColor="{Binding ShingenColor.Value}"
-                   VerticalOptions="FillAndExpand" HorizontalTextAlignment = "Center" VerticalTextAlignment = "Center" FontAttributes = "Bold" />
+            <Label Text="{Binding ShingenLabel.Value}" Grid.Row="0" TextColor="{Binding ShingenColor.Value}" Style="{StaticResource LabelStyle}"/>
             <Image Aspect = "AspectFit" Grid.Row="1" Source="{Binding RanCyanKowashiyaImage.Value, Converter={StaticResource ImageSourceConverter}}" >
                 <Image.GestureRecognizers>
                     <TapGestureRecognizer Command="{Binding ShingenRanCommand}" />
                 </Image.GestureRecognizers>
             </Image>
-            <ai:HCollectionView Grid.Row="2" ItemsSource="{Binding ShingenItems}" ColumnWidth="100" Spacing="4" >
+            <ai:HCollectionView Grid.Row="2" ItemsSource="{Binding ShingenItems}" ColumnWidth="40" Spacing="4" >
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <ai:ContentCell>
@@ -71,14 +77,13 @@
                 <RowDefinition Height="*" />
                 <RowDefinition Height="100" />
             </Grid.RowDefinitions>
-            <Label Text="{Binding KoushinLabel.Value}" Grid.Row="0" FontSize = "100"  TextColor="{Binding KoushinColor.Value}"
-                   VerticalOptions="FillAndExpand" HorizontalTextAlignment = "Center" VerticalTextAlignment = "Center" FontAttributes = "Bold" />
+            <Label Text="{Binding KoushinLabel.Value}" Grid.Row="0" TextColor="{Binding KoushinColor.Value}" Style="{StaticResource LabelStyle}"/>
             <Image Aspect = "AspectFit" Grid.Row="1" Source="{Binding RanCyanMikoImage.Value, Converter={StaticResource ImageSourceConverter}}" >
                 <Image.GestureRecognizers>
                     <TapGestureRecognizer Command="{Binding KoushinRanCommand}" />
                 </Image.GestureRecognizers>
             </Image>
-            <ai:HCollectionView Grid.Row="2" ItemsSource="{Binding KoushinItems}" ColumnWidth="50" Spacing="4" >
+            <ai:HCollectionView Grid.Row="2" ItemsSource="{Binding KoushinItems}" ColumnWidth="40" Spacing="4" >
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <ai:ContentCell>
@@ -101,8 +106,7 @@
                 <RowDefinition Height="*" />
                 <RowDefinition Height="100" />
             </Grid.RowDefinitions>
-            <Label Text="{Binding SyokugyouLabel.Value}" Grid.Row="0" FontSize = "100" TextColor="{Binding SyokugyouColor.Value}"
-                   VerticalOptions="FillAndExpand" HorizontalTextAlignment = "Center" VerticalTextAlignment = "Center" FontAttributes = "Bold" />
+            <Label Text="{Binding SyokugyouLabel.Value}" Grid.Row="0" TextColor="{Binding SyokugyouColor.Value}" Style="{StaticResource LabelStyle}"/>
             <Image Aspect = "AspectFit" Grid.Row="1" Source="{Binding RanCyanKowashiyaImage.Value, Converter={StaticResource ImageSourceConverter}}" >
                 <Image.GestureRecognizers>
                     <TapGestureRecognizer Command="{Binding SyokugyouRanCommand}" />
@@ -131,8 +135,7 @@
                 <RowDefinition Height="*" />
                 <RowDefinition Height="100" />
             </Grid.RowDefinitions>
-            <Label Text="{Binding ToubatsuLabel.Value}" Grid.Row="0" FontSize = "100"  TextColor="{Binding ToubatsuColor.Value}"
-                   VerticalOptions="FillAndExpand" HorizontalTextAlignment = "Center" VerticalTextAlignment = "Center" FontAttributes = "Bold" />
+            <Label Text="{Binding ToubatsuLabel.Value}" Grid.Row="0" TextColor="{Binding ToubatsuColor.Value}" Style="{StaticResource LabelStyle}"/>
             <Image Aspect = "AspectFit" Grid.Row="1" Source="{Binding RanCyanMikoImage.Value, Converter={StaticResource ImageSourceConverter}}" >
                 <Image.GestureRecognizers>
                     <TapGestureRecognizer Command="{Binding ToubatsuRanCommand}" />
